resources/assets/sass/main.scss
/*!
 * (c) 2017, Raphael Marco
 */

html, body {
    height: 100%;
}

body {
    overflow-x: initial;
    background: #f6f9fc;

    &.main-page {
        background: #fff;
    }

    &.login-page {
        background: #f1f1f1;
    }

    &.error-page {
        background: #fff;

        .main-container {
            padding-top: 0;
        }
    }
}

/**
 * Overrides
 */
[v-if], [v-else], [v-show], b-modal {
    display: none;
}

.box {
    border-radius: 2px;
}

.table td, .table th {
    vertical-align: middle;
}

.media {
    align-items: center;

    &.site-header {
        @media (max-width: 769px) {
            .title {
                font-size: 1.5rem;
            }

            .subtitle {
                font-size: 1rem;
            }
        }
    }

    &.user {
        .title {
            font-size: 1.4rem;
            font-weight: 600;

            small {
                display: block;
                font-size: 0.8rem;
                font-weight: 400;
                text-align: left;
                color: #999;
            }

            margin-bottom: 0.1rem;
        }

        .subtitle {
            font-size: 1rem;
            font-weight: 400;
        }

        @media (min-width: 1000px) {
            .logout {
                text-align: right;
            }
        }

        p {
            margin: 0;
            color: #fff;
        }

        .button.is-small {
            height: 1.2rem;
        }
    }
}

.card {
    &.candidate {
        .card-image {
            pointer-events: none;
        }

        .card-content {
            .title {
                height: 60px;
            }
        }

        &.is-selected {
            outline: 1px solid #23d160;
        }
    }
}

.has-video-background {
    position: relative;

    & > .video-background {
        position: absolute;
        top: 0;
        left: 0;
        right: 0;
        bottom: 0;

        width: 100%;
        height: auto;
        max-height: 100%;

        object-fit: cover;
    }

    & > .overlay {
        background-image: -moz-linear-gradient(top, rgba(0, 109, 183, 0.5), #006db7);
        background-image: -webkit-gradient(linear, 0 0, 0 100%, from(rgba(0, 109, 183, 0.5)), to(#006db7));
        background-image: -webkit-linear-gradient(top, rgba(0, 109, 183, 0.5), #006db7);
        background-image: -o-linear-gradient(top, rgba(0, 109, 183, 0.5), #006db7);
        background-image: linear-gradient(to bottom, rgba(0, 109, 183, 0.5), #006db7);
        background-repeat: repeat-x;

        position: fixed;
        top: 0;
        left: 0;
        right: 0;
        bottom: 0;
    }

    & > .container {
        z-index: 10;
    }
}

/**
 * App Styles
 */

.nav {
    position: fixed;
    top: 0;
    left: 0;
    right: 0;

    z-index: 999;

    & > .container {
        margin-left: 0;
        margin-right: 0;
    }

    .nav-left {
        overflow: hidden;
    }

    .nav-item.has-logo {
        padding: 0;

        img {
            height: 45px;
            max-height: 45px;
        }
    }

    .nav-item .icon {
        margin-right: 0.5em;
    }

    .toggle-menu-button {
            position: relative;
            background: #3273dc;
            color: #fff;
            width: 52px;
            cursor: pointer;
            outline: none;
            border: none;
            border-radius: 0;
            box-shadow: none;

        .fa {
            position: absolute;
            left: 17px;

            font-size: 20px;
        }
    }

    .avatar {
        margin-right: 10px;
    }
}

.sidebar {
    position: fixed;
    top: 52px;
    left: 0;
    bottom: 0;

    width: 52px;
    padding: 15px 0;

    background: #222;
    text-align: left;
    transition: width 200ms ease;

    overflow: hidden;

    z-index: 10000;

    @media (max-width: 768px) {
        right: 0;

        display: none;

        overflow-y: auto;
        text-align: center;
    }

    .menu-label {
        padding: 0 0.75em;
        transition: all 200ms ease;
    }

    .menu-list {
        a {
            color: #eee;
            border-radius: 0;
            line-height: 1.8em;
            font-size: 14px;

            &:hover {
                background-color: #404040;
            }

            .icon .fa {
                font-size: 16px;
            }
        }

        li {
            white-space: nowrap;

            .icon {
                margin-left: 4px;
            }

            .text {
                opacity: 0;
                transition: opacity 200ms ease;
            }
        }

        li.is-active {
            & > a {
                background-color: #3273dc;
            }

            & > ul a {
                padding-left: 2em;
            }
        }
    }
}

.main-container {
    padding-top: 52px;
    padding-left: 52px;
    width: 100%;

    transition: margin-left 200ms ease;

    & > .columns {
        background: #f6f9fc;
        margin: 0;
    }

    @media (max-width: 768px) {
        padding-left: 0;
    }
}

.off-menu.active {
    .sidebar.menu {
        display: block;
        width: 250px;

        li .text {
            opacity: 1;
        }

        @media (max-width: 768px) {
            width: 100%;
        }
    }
}

.off-menu:not(.active) {
    .sidebar.menu {
        .menu-label {
            margin: 0;
            opacity: 0;
        }
    }
}

.has-contents-below {
    margin-bottom: 1.5rem;
}

.is-flat {
    border-radius: 0;
}

.is-fit {
    width: 1px;
}

.candidate-picture {
    background: #f5f5f5;
}

.vote-count {
    position: absolute;
    bottom: 5px;
    right: 5px;
}

.vote-button.is-success {
    pointer-events: none;
}

/**
 * Transitions
 */

.slide-up-enter-active {
    transition: all .5s ease;
}

.slide-up-leave-active {
    transition: all .5s ease;
}

.slide-up-enter, .slide-up-leave-to {
    transform: translateY(-200px);
    opacity: 0;
}

.fade-enter-active, .fade-leave-active {
    transition: opacity .5s
}

.fade-enter, .fade-leave-to {
    opacity: 0
}

.slide-fade-enter-active, .slide-fade-leave-active {
    transition: all .3s ease;
}

.slide-fade-enter, .slide-fade-leave-to {
    transform: translateX(10px);
    opacity: 0;
}

